--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Miniver&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 *{
     margin:0;
     padding: 0;
@@ -62,23 +65,39 @@ img {
   padding: 0 20px;
   max-width: var(--site-max-width);
 }
+.section-title{
+  text-align: center;
+  padding: 60px 0 100px;
+  text-transform: uppercase;
+  font-size: var(--font-size-xl);
+}
+
+.section-title::after{
+  content:"";
+  width: 80px;
+  height: 5px;
+  display: block;
+  margin: 10px auto 0;
+  border-radius: var(--border-redius-s);
+  background-color: var(--poop-color);
+}
 /* Navbar styling */
 .nav-logo {
   display: flex;
-  align-items: center; /* 세로 중앙 정렬 */
+  align-items: center; 
 }
 
 .logo-image {
-  width: 40px; /* 원하는 크기로 조절 */
-  height: 40px; /* 정사각형 유지 */
-  margin-right: 10px; /* 제목과 간격 조절 */
-  border-radius: 50%; /* 원형 로고를 원하면 사용 */
+  width: 40px; 
+  height: 40px; 
+  margin-right: 10px; 
+  border-radius: 50%; 
 }
   header {
     position: fixed;
     width: 100%;
     z-index: 5;
-    background: var(--darkcoffee-color);
+    background: var(--dark-color);
 
   }
 
@@ -183,8 +202,125 @@ img {
     max-width: 500px;
     margin-right: 30px;
   }
+/* About section styling */
+.about-section .section-title {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
 
-  @media (max-width: 900px) {
+.about-section .about-details .text {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+
+  .about-section{
+    padding: 120px 0;
+    background: var(--oatmeal-color);
+  }
+
+  .about-section .section-content {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .about-section .about-image-wrapper .about-image {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: var(--border-redius-circle);
+  }
+
+  .about-section .about-details .section-title {
+    padding: 0;
+  }
+
+  .about-section .about-details {
+    max-width: 50%;
+  }
+
+  .about-section .about-details .text{
+    line-height: 30px;
+    margin: 50px 0 30px;
+    text-align: center;
+    font-size: var(--font-size-m);
+  }
+
+  .about-section .social-link-list{
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+  }
+  .about-section .social-link-list .social-link{
+    color: var(--poop-color);
+    font-size: var(--font-size-l);
+    transition: 0.2s ease;
+  }
+
+  .about-section .social-link-list .social-link:hover {
+    color: var(--darkcoffee-color);
+  }
+
+  /* Our product styling*/
+  .menu-section h2, 
+  .menu-section p, 
+  .menu-section .menu-list .menu-item {
+      font-family: 'Inter', sans-serif !important;
+      letter-spacing: -0.3px;
+      line-height: 1.2;
+  }
+
+  .menu-section {
+    color: var(--dark-color);
+    background-color: var(--oatmeal-color);
+    padding: 50px 0 100px;
+  }
+
+  .menu-section .menu-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .menu-section .menu-list .menu-item{
+    display:flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(100% / 3 - 10px);
+  }
+
+  .menu-section .menu-list .menu-item .menu-image{
+    max-width: 83%;
+    aspect-ratio: 1;
+    margin-bottom: 15px;
+    object-fit: contain;
+  }
+
+  .menu-section .menu-list .menu-item .naem{
+    margin: 12px 0;
+    font-size: var(--font-size-l);
+    font-weight: var(--font-weight-semibold);
+  }
+
+  .menu-section .menu-list .menu-item .text{
+    font-size: var(--font-size-m);
+  }
+
+  /* 핸드폰을 위한 디자인*/
+  @media screen and (max-width: 1024px) {
+    .menu-section .menu-list {
+      gap: 60px;
+    }
+    .menu-section .menu-list .menu-item{
+      width: calc(100% / 3 - 10px);
+    }
+  }
+
+  @media screen and (max-width: 900px) {
     :root {
       --font-size-m: 1rem;
       --font-size-l: 1.3rem;
@@ -254,6 +390,58 @@ img {
     .hero-section .hero-image-wrapper{
       max-width: 270px;
       margin-right: 0;
+      margin-top: 40px;
     }
-    
+    .hero-section .section-content{
+      gap: 50px;
+      text-align: center;
+      padding: 30px 20px 20px;
+      flex-direction: column-reverse;
+      justify-content: center;
+    }
+    .hero-section .hero-details :is(.subtitle, 
+    .description), .about-section .about-details{
+      max-width: 100%;
+    }
+
+    .hero-section .hero-details .buttons {
+      justify-content: center;
+    }
+
+    .hero-section .hero-image-wrapper {
+      max-width: 270px;
+      margin-right: 0;
+    }
+
+    .about-section .section-content {
+      gap: 70px;
+      flex-direction: column-reverse;
+    }
+
+    .about-section .about-image-wrapper .about-image{
+      width: 100%;
+      height: 100%;
+      max-width: 270px;
+      aspect-ratio: 1;
+    }
+    .menu-section .menu-list {
+      gap: 30px;
+    }
+
+    .menu-section .menu-list .menu-item{
+      width: calc(100% / 2 - 30px);
+    }
+
+    .menu-section .menu-list .menu-image{
+      max-width: 200px;
+    }
   }
+
+@media screen and (max-width: 640px) {
+  .menu-section .menu-list {
+    gap: 60px;
+  }
+  .menu-section .menu-list .menu-item{
+    max-width: 100%;
+  }
+}
