--- a/style.css
+++ b/style.css
@@ -8,7 +8,14 @@
     box-sizing: border-box;
     font-family: "Miniver", sans-serif;
   }
-
+  body {
+    overflow-x: hidden;
+  }
+  html, body {
+    height: 100%;
+    overflow-x: hidden;
+    background-color: var(--oatmeal-color); /* 또는 원하는 전역 배경 */
+  }
   :root{
     /* Colors */
     --poop-color: #2C1A0B;
@@ -280,7 +287,7 @@ img {
   .menu-section .menu-list{
     display: flex;
     flex-wrap: wrap;
-    gap: 50px;
+    gap: 110px;
     align-items: center;
     justify-content: space-between;
   }
@@ -316,7 +323,7 @@ img {
       gap: 60px;
     }
     .menu-section .menu-list .menu-item{
-      width: calc(100% / 3 - 10px);
+      width: calc(100% / 3 - 60px);
     }
   }
 
@@ -440,10 +447,16 @@ img {
 @media screen and (max-width: 640px) {
   .menu-section .menu-list {
     gap: 60px;
+    flex-direction: column;
+    align-items: center; 
   }
-  .menu-section .menu-list .menu-item{
-    max-width: 100%;
+  .menu-section .menu-list .menu-item {
+    width: 100%;               
+    max-width: 100%;          
+    flex-direction: column;    
+    text-align: center;        
   }
+
   .menu-section .menu-list .menu-image{
     max-width: 200px;
   }
